--- a/coffe-s-management/package.json
+++ b/coffe-s-management/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
