--- a/coffe-s-management/.gitignore
+++ b/coffe-s-management/.gitignore
@@ -1,17 +1,17 @@
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
+*/npm-debug.log*
+*/yarn-debug.log*
+*/yarn-error.log*
+*/pnpm-debug.log*
+*/lerna-debug.log*
+*/node_modules/
+*/dist
+*/dist-ssr
 *.local
-
+*/packege-lock.json
+*/package.json
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
